2007-02-15  Thomas Moulard  <thomas.moulard@lrde.epita.fr>

	Add ORBIX autodetection.
	* urbi-with-orbix.m4: Add macro. New.

2007-02-15  Thomas Moulard  <thomas.moulard@lrde.epita.fr>

	Add OpenHRP SDK detection.
	* urbi-with-openhrp.m4: Add macro. New.

2007-02-15  Akim Demaille  <akim@lrde.epita.fr>

	Fix xpass handling
	* check.mk: XPASSes are failures.

2007-02-13  Akim Demaille  <demaille@gostai.com>

	Use another green for XFAIL
	* check.mk: here.

2007-02-13  Akim Demaille  <demaille@gostai.com>

	Don't ignore failures
	* check.mk: Fix a typo: $? => $$?.

2007-02-12  Akim Demaille  <akim@lrde.epita.fr>

	* svn-externals.mk (<external>-upci): New.

2007-02-10  Akim Demaille  <akim.demaille@free.fr>

	* svn-externals (svn_externals_update_stream): Take the host
	dir path into account.

2007-02-10  Akim Demaille  <akim.demaille@free.fr>

	svn-externals: Don't up the host dir
	* svn-externals (svn_externals_update_stream): up the updated
	directories.
	Suggested by MN.

2007-02-09  Akim Demaille  <akim@lrde.epita.fr>

	* check.mk: Improve comments.
	(am__tty_colors): More resilient.
	Lighter blue.
	(SUFFIXES): Remove, useless since we use GNU Make %-rules.
	(clean-check-TESTS): Rename as...
	(check-clean): this.
	Support check-clean-local and CHECK_CLEANFILES for consistency.

2007-02-02  Akim Demaille  <akim@lrde.epita.fr>

	Clean manifest files.
	* init.mk (CLEANFILES): Add *.exe.manifest.

2007-02-01  Akim Demaille  <akim@lrde.epita.fr>

	Use colors for the final result too.
	* check.mk (am__tty_colors): New.
	Use it also for the final box.
	Shush the rst2html lookup.

2007-02-01  Akim Demaille  <akim@lrde.epita.fr>

	Use colors.
	* check.mk (am__check_post): Use colors for PASS, FAIL etc.

2007-02-01  Akim Demaille  <akim@lrde.epita.fr>

	Fix check-hmtl.
	* check.mk: check-TESTS _can_ fail.

2007-01-30  Akim Demaille  <demaille@gostai.com>

	Upgrade check.mk to produce html
	* check.mk: here.

2007-01-30  Akim Demaille  <demaille@gostai.com>
