@@ -22,27 +22,33 @@ svn_externals = $(top_srcdir)/build-aux/svn-externals
 # I would like to get rid of this, but Automake is too conservative
 # when parsing rules, and rejects (an error) targets like
 # $(SVN_EXTERNALS:=-up), but accepts $(SVN_EXTERNALS:=.up) (a period).
-SVN_EXTERNALS_CI   = $(SVN_EXTERNALS:=-ci)
-SVN_EXTERNALS_HELP = $(SVN_EXTERNALS:=-help)
-SVN_EXTERNALS_PIN  = $(SVN_EXTERNALS:=-pin)
-SVN_EXTERNALS_UP   = $(SVN_EXTERNALS:=-up)
-SVN_EXTERNALS_UPCI = $(SVN_EXTERNALS:=-upci)
+SVN_EXTERNALS_CI    = $(SVN_EXTERNALS:=-ci)
+SVN_EXTERNALS_CI_CI = $(SVN_EXTERNALS:=-ci-ci)
+SVN_EXTERNALS_HELP  = $(SVN_EXTERNALS:=-help)
+SVN_EXTERNALS_PIN   = $(SVN_EXTERNALS:=-pin)
+SVN_EXTERNALS_UP    = $(SVN_EXTERNALS:=-up)
+SVN_EXTERNALS_UP_CI = $(SVN_EXTERNALS:=-up-ci)
 
-.PHONY: $(SVN_EXTERNALS_HELP) $(SVN_EXTERNALS_PIN) \
-        $(SVN_EXTERNALS_CI)   $(SVN_EXTERNALS_UP)  \
-        $(SVN_EXTERNALS_UPCI)
+.PHONY: $(SVN_EXTERNALS_HELP) $(SVN_EXTERNALS_PIN)	\
+        $(SVN_EXTERNALS_CI)   $(SVN_EXTERNALS_CI_CI)   	\
+        $(SVN_EXTERNALS_UP)  $(SVN_EXTERNALS_UP_CI)
 help: $(SVN_EXTERNALS_HELP)
-$(SVN_EXTERNALS_HELP):
-	@ext=$(@:-help=);							\
-	echo "$$ext-ci:    check in $$ext and up it";				\
-	echo "$$ext-up:    update the svn:externals revision for $$ext";	\
-	echo "$$ext-upci:  up $$ext and and check in its host directory";	\
+$(SVN_EXTERNALS_HELP):							  \
+	@ext=$(@:-help=);						  \
+	echo "$$ext-ci:    check in $$ext and up it";			  \
+	echo "$$ext-ci-ci: check in $$ext, up it, and check in host";	  \
+	echo "$$ext-up:    update the svn:externals revision for $$ext";  \
+	echo "$$ext-up-ci: up $$ext and and check in its host directory"; \
 	echo "$$ext-pin:   subscribe to the latest $$ext"
 
 # Checkin the pinned external and update it.
 $(SVN_EXTERNALS_CI):
 	cd $(srcdir)/$(@:-ci=) && $(SVN) ci
 	$(MAKE) $(AM_MAKEFLAGS) $(@:-ci=-up)
+
+$(SVN_EXTERNALS_CI_CI):
+	$(MAKE) $(AM_MAKEFLAGS) $(@:-ci-ci=-ci)
+	svn ci -m "Update $(@:-ci-ci=)." -N $(srcdir)
 
 # Pin the svn:external by subscribing to it.
 $(SVN_EXTERNALS_PIN):
@@ -53,9 +59,10 @@ $(SVN_EXTERNALS_UP):
 	$(svn_externals) --update=$(@:-up=) $(srcdir)
 
 # Update the pinned external.
-$(SVN_EXTERNALS_UPCI):
-	$(MAKE) $(AM_MAKEFLAGS) $(@:-upci=-up)
-	svn ci -m "Update $(@:-upci=)." -N $(srcdir)
+# FIXME: Does not work well: it does not check in subdirectories.
+$(SVN_EXTERNALS_UP_CI):
+	$(MAKE) $(AM_MAKEFLAGS) $(@:-up-ci=-up)
+	svn ci -m "Update $(@:-up-ci=)." -N $(srcdir)
 
 
 ## ------------------- ##
@@ -72,5 +79,5 @@ externals-help:
 # All the externals at once.
 externals-ci: $(SVN_EXTERNALS_CI) $(SVN_EXTERNALS_PROXY:=-ci)
 externals-up: $(SVN_EXTERNALS_UP) $(SVN_EXTERNALS_PROXY:=-up)
-externals-upci: $(SVN_EXTERNALS_UP)
+externals-up-ci: $(SVN_EXTERNALS_UP)
 	svn ci -m "Update externals." $(srcdir)
