@@ -1,3 +1,9 @@
+2007-02-15  Akim Demaille  <akim@lrde.epita.fr>
+
+	Fix exit for test suites
+	* check.mk: Stupid novice typo: use $$ for shell variables.
+	* svn-externals.mk (*-ci-ci): New.
+
 2007-02-15  Thomas Moulard  <thomas.moulard@lrde.epita.fr>
 
 	Add ORBIX autodetection.
